<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#434146"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/chbTeamsCondition" />

    <CheckBox
        android:id="@+id/chbTeamsCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:text="@string/agree_with_teams_condition"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/radioSex" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@+id/tLayoutRetypePassword">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/radio_female" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAllReadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_login_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/btnSingUp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOfImgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tLayoutFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/cardViewOfImgView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tLayoutLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tLayoutFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tLayoutLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tLayoutRetypePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tLayoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retype_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>